Refactoring of DiffElement